# evotest

./: .gitignore  README.md  build_all.bat
CommandApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
EmulatorApp/: CMakeLists.txt  EmulIso6892.cpp  EmulIso6892.h  LoggingModbusServer.cpp  LoggingModbusServer.h  MainWindow.cpp  MainWindow.h
EvoCmdApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui
EvoLiteApp/: CMakeLists.txt  CommandForm.cpp  CommandForm.h  CommandForm.ui  Iso6892Analyzer.cpp  Iso6892Analyzer.h  Iso6892Form.cpp  Iso6892Form.h  Iso6892Form.ui  MachineControl.cpp  MachineControl.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QCustomPlot.cmake  TcpConnForm.cpp  TcpConnForm.h  TcpConnForm.ui  TensilePlotWidget.cpp  TensilePlotWidget.h
EvoTestApp/: CMakeLists.txt  EvoData.cpp  EvoData.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeasData.cpp  MeasData.h  PlanAnalysisForm.cpp  PlanAnalysisForm.h  PlanAnalysisForm.ui  PlanCommonForm.cpp  PlanCommonForm.h  PlanCommonForm.ui  PlanControlModeForm.cpp  PlanControlModeForm.h  PlanControlModeForm.ui  PlanCurveForm.cpp  PlanCurveForm.h  PlanCurveForm.ui  PlanDisplayForm.cpp  PlanDisplayForm.h  PlanDisplayForm.ui  PlanLeftWidget.cpp  PlanLeftWidget.h  PlanLeftWidget.ui  PlanMenuWidget.cpp  PlanMenuWidget.h  PlanMenuWidget.ui  PlanReportForm.cpp  PlanReportForm.h  PlanReportForm.ui  PlanSensorForm.cpp  PlanSensorForm.h  PlanSensorForm.ui  PlanSetupWidget.cpp  PlanSetupWidget.h  (+18 more)
IndicatorApp/: CMakeLists.txt  EvoGui.h  EvoModbus.cpp  EvoModbus.h  EvoUnit.cpp  EvoUnit.h  GuiDashboard.cpp  GuiDashboard.h  GuiFormulaConfig.cpp  GuiFormulaConfig.h  GuiSourceConfig.cpp  GuiSourceConfig.h  MainWindow.cpp  MainWindow.h  main.cpp
ModbusApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
doc/: MachinePrinciple.md
matlab/: unit_metals_iso68921.m  unit_plastics_iso527.m  unit_resins_iso37.m
